sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var k:Int =1
  var a:Int =0
  for(i<- 1 to getNombreValeurs()-1){
    a=getValeur(i)
    k=1
    for(j<-1 to i){
      
      if(getValeur(i-j)>a){
   			k=i-j   
        copie(i-j,i-j+1)  
      }
      else{
        j=i
      }
    }
    
      if(k!=1 && i !=1){
        setValeur(k,a)
      }
        
      

                   }
}



























































































































































































































